# sip-dns-lookup

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  sample_domains.txt.example  sip_dns_lookup.py  test_sip_domains.py
.claude/agents/: code-review-fixer.md
